[package]
name = "miru-mcp"
version = "0.1.1"
edition = "2024"
rust-version = "1.90"
description = "A local MCP server that gives LLMs read access to Grafana Loki logs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ConeDjordjic/miru"
readme = "README.md"
keywords = ["mcp", "loki", "grafana", "logs", "observability"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "miru"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "1"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["now"] }

[dev-dependencies]
mockito = "1"
